Added helper functions and simplified complex code with them.

--- a/Registration/styles.css
+++ b/Registration/styles.css
@@ -27,3 +27,13 @@ label{
 #create_account{
     margin: 10px;
 }
+
+.eventform{
+    width: 250px;
+    display: flex;
+    flex-direction: column;
+}
+
+.time_login{
+    margin: 10px;
+}
